--- a/Site/Web2/css/estiloFeedbackAluno.css
+++ b/Site/Web2/css/estiloFeedbackAluno.css
@@ -1,45 +1,207 @@
-h1{
+.dropdown-menu {
+    margin: 0px -3px;
+    padding: 0px;
+}
+.dropdown-menu{
+    color: black;
+    filter: drop-shadow(4px 4px 4px black);
+}
+
+.dropdown-item:hover {
+    background-color: unset !important;
+}
+
+p{
+    font-size: 3vh;
+}
+
+h1 {
+    font-size: 5vh !important;
     text-align: center;
 }
 
-.boxText{
-    
+#clica{
+    width: 5vh;
+    height: 5vh;
+}
+#sai svg{
+    height: 5vh;
+    width: 4vh;
+}
+#sair svg{
+    height: 5vh;
+    width: 4vh;
 }
 
-.indiciplina{
-    height: auto
+label{
+    font-size: 3vh !important;
+}
+#enviar{
+    background-color: white !important;
+    color: #005FF9;
+    border-radius: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#enviar:hover{
+    background-color: #d3d3d3 !important;
+    color: #005FF9;
+    font-style: italic;
+}
+#text_white{
+    align-items: center;
+    justify-content: center;
+}
+input, select, textarea{
+    width: 90vh !important;
 }
 
 /* //Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-    .indiciplina{
-        height: 83vh;
+    #rodape {
+        bottom: unset;
+        height: 3vh !important;
+        margin: unset;
+        padding-bottom: 2rem !important;
     }
+    #rodape .col {
+        margin-top: 0 !important;
+    }
+    
+    #rodape svg {
+        height: 3vh;
+        width: 3vh;
+    }
+    .indiciplina {
+        height: 130vh;
+        padding-top: 5vh;
+       
+    }
+    #sai{
+        display: none;
+    }
+    #sair svg{
+        height: 5vh;
+        width: 3vh;
+    }
+    .navbar button{
+        font-size: 2vh;
+    }
+    #clica{
+        width: 4vh !important;
+        height: 4vh !important;
+    }
+    
 }
+
 
 /* //Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
-    .indiciplina{
-        height: 83vh;
+    #rodape {
+        bottom: unset;
+        height: 2rem !important;
     }
+
+    #rodape .col {
+        margin-top: 0 !important;
+    }
+    #rodape svg {
+        height: 5vh;
+        width: 5vh;
+    }
+    .indiciplina {
+        height: 150vh;
+        padding-top: 5vh;
+    }
+    #sai{
+        display: none;
+    }
+    #sair svg{
+        height: 6vh;
+        width: 8vh;
+    }
+    #clica{
+        width: 6vh;
+        height: 8vh;
+    }
+    
+    
 }
 
+
 /* // Medium devices (tablets, 768px and up) */
+/* @media (min-width: 768px) and (max-width: 991.98px) and (orientation: landscape) */
+
 @media (min-width: 768px) and (max-width: 991.98px) {
-    .indiciplina{
-    height: 83vh;
-}}
+    .indiciplina {
+        height: 90vh;
+        padding-top: 5vh;
+        
+    }
+
+    #rodape {
+        bottom: unset;
+    }
+
+    #sai{
+        display: none;
+    }
+    #subNav svg{
+        width: 5vh !important;
+        height: 5vh !important;
+    }
+    
+    #sair svg{
+        height: 5vh !important;
+        width: 5vh !important;
+    }
+    
+}
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-    .indiciplina{
-        height: 83vh;
+    .indiciplina {
+        height: 80vh;
+        padding-top: 10vh;
     }
+
+    #sair{
+        display: none;
+    }    
+
 }
 
 /* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-    .indiciplina{
-        height: 83vh;
+@media (min-width: 1200px) and (max-width: 2559.98px) {
+    .indiciplina {
+        height: 80vh;
+        padding-top: 8vh;
     }
+    
+    #subNav svg{
+        height: 4vh !important;
+    }
+    #sair{
+        display: none;
+    }
+    
+
+}
+
+@media (min-width: 2560px) {
+    .indiciplina {
+        height: 85vh;
+        padding-top: 10vh;
+    }
+
+    #sair{
+        display: none;
+    }
+    #subNav a{
+        padding-right: 5rem;
+    }
+
+    
+
 }
