--- a/Site/Web2/css/estiloCadastro.css
+++ b/Site/Web2/css/estiloCadastro.css
@@ -42,7 +42,7 @@ svg{
 }
 
 #criar:hover{
-    background-color: #d3d3d3 !important;
+    /* background-color: #d3d3d3 !important; */
     color: #005FF9;
     font-style: italic;
 }
